--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Delegantes</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/gijgo@1.9.10/js/gijgo.min.js" type="text/javascript"></script>
+    <link href="https://cdn.jsdelivr.net/npm/gijgo@1.9.10/css/gijgo.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="index.css">
     <script src="function.js"></script>
   </head>
@@ -37,14 +39,6 @@
               <option>Select Commission</option>
             </select>
           </div>
-          <div class="form-group">
-            <label>Speches</label>
-            <input type="text" class="form-control" name="Speches"> <!-- TODO: placeholder -->
-          </div>
-          <div class="form-group">
-            <label>alias</label>
-            <input type="number" class="form-control" name="Alias">
-          </div>
           <div class="from-group">
             <label>Sex</label><br>
             <label class="radio-inline">
@@ -57,7 +51,10 @@
               <input type="radio" name="optradio" id="Other">Other
             </label><br>
           </div>
-          <!-- TODO: date of birth -->
+          <div class="form-group">
+            <label>Date of Birth</label><br>
+            <input name="DOB" id="datepicker"></input>
+          </div>
           <div class="form-group">
             <label>Place of Birth</label>
             <input type="text" class="form-control" placeholder="City" name="POB">
@@ -72,7 +69,7 @@
           </div>
           <div class="form-group">
             <label>Number TS</label>
-            <input type="number" class="form-control" name="Ts"> <!-- TODO: placeholder -->
+            <input type="number" class="form-control" name="Ts">
           </div>
           <div class="form-group">
             <label>Parent 1 Name</label>
@@ -97,7 +94,9 @@
           <input type="button" class="btn btn-primary pull-right" id="btn" onclick="submit();" value="Submit">
         </form>
         <script type="text/javascript">
-
+          $('#datepicker').datepicker({
+              uiLibrary: 'bootstrap4'
+          });
           document.getElementById("btn").addEventListener("click", submit)
         </script>
       </div>
